<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20.0dip">

            <Switch
                android:id="@+id/simSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/simSwitch"
                android:text="@string/play_video_siquentially"
                android:textColor="#ff000000" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#44999999" />

        <LinearLayout
            android:id="@+id/audio_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15.0dip" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#44999999" />

        <LinearLayout
            android:id="@+id/music_picker_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_track"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/selectTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/blue_frame"
                    android:src="@drawable/add_audio_icon" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical"
                    android:paddingBottom="10.0dip">

                    <TextView
                        android:id="@+id/selectedTrack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10.0dip" />

                    <SeekBar
                        android:id="@+id/seekTrackVolume"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/musicSuggestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7.0dip"
                android:layout_marginRight="10.0dip"
                android:gravity="center_horizontal"
                android:text="@string/music_suggestion"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#44999999" />

        <RelativeLayout
            android:id="@+id/override"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20.0dip">

            <Switch
                android:id="@+id/overrideSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/overrideSwitch"
                android:text="@string/override_video_lenght"
                android:textColor="#ff000000" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#44999999" />

        <LinearLayout
            android:id="@+id/videoDurationLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_duration"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/videoDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:text="@string/seconds_text"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>